grammar.js
  paren: $ => prec.right(seq(OP.par_left, $.expr, OP.par_right)),

  // NOTE: I don't 100% understand why, but here we need to give the numeric precedence to the *inner* expression.
  unary: $ => prec.right(seq(
    field('op', choice(
      OP.not,
      mark(OP.exclam),   // without the higher precedence, `* {!condition} choice` is a parse error
      OP.minus)),
    field('right', prec(14, $.expr))  // <- THIS is where the precedence goes.
  )),

  // These precedence numbers are based on `RegisterExpressionOperators` in the Ink parser,
  // see <https://github.com/inkle/ink/blob/v.1.2.0/compiler/InkParser/InkParser_Expressions.cs#L472-L497>.
  // Ink is unusual in that `and` and `&&` bind equally as strongly as `or` and `||`,
  // while, `/` binds tighter than `*`, `-` tighter than `+` and `mod` is tightest of all.
  //
  //                                    ¯\_(ツ)_/¯
  binary: $ => choice(
    binop($, 8, OP.percent, OP.mod),
    binop($, 7, OP.slash),
    binop($, 6, OP.asterisk),
    binop($, 5, OP.minus),
    binop($, 4, OP.plus),
    binop($, 3, OP.caret, OP.hasnt, OP.exclamquestion, OP.has, OP.question),
    binop($, 2, OP.neq, OP.gt, OP.lt, OP.le, OP.ge, OP.eq),
    binop($, 1, OP.or, OP.and, OP.dbl_amp, $._dbl_pipe),
  ),

  // We have to actually parse this (can't treat '||' as a token),
  // because `{a||b}` in Ink is actually a *sequence*, so it means "a, then nothing, then b".
  _dbl_pipe: _ => alias(
    seq(OP.pipe, token.immediate(OP.pipe)),
    '||' // Pretend like it is a token, no need to alarm anybody.
  ),

  identifier: _ => IDENTIFIER_REGEX,

  qualified_name: $ => prec.right(seq(
    $.identifier, OP.period, $.identifier,
    optional(seq(OP.period, $.identifier)) // third level: -> knot.stitch.label
  )),

  number: _ => NUMBER_REGEX,

  divert: $ => seq(
    $._divert_mark,
    field('target', $._divert_target),
  ),
}


/// Separate every two occurrences of `rule` by an occurrence of `sep`. `rule` has to occurr at least once.
function sepBy1(sep, rule) {
  return seq(rule, repeat(seq(sep, rule)));
}

module.exports = grammar({
  name: 'ink',

    ink: $ => seq(
      optional($._content_block),
      repeat($.stitch_block), // Evidently we can define orphan stitches. OK …
      repeat($.knot_block),
    ),

    // Transform the external nodes into anonymous nodes. That’s because hidden nodes
    // don’t appear at all in downstream tools (can’t find them using cursors), but
    // sometimes we need to know if the exist (or have been inserted as MISSING, etc.)
    _eol: $ => alias($.eol, "EOL"),
    _knot_block_start: $ => alias($.knot_block_start, "KNOT_BLOCK_START"),
    _knot_block_end: $ => alias($.knot_block_end, "KNOT_BLOCK_END"),
    _stitch_block_start: $ => alias($.stitch_block_start, "STITCH_BLOCK_START"),
    _stitch_block_end: $ => alias($.stitch_block_end, "STITCH_BLOCK_END"),
    _choice_block_start: $ => alias($.choice_block_start, "CHOICE_BLOCK_START"),
    _choice_block_end: $ => alias($.choice_block_end, "CHOICE_BLOCK_END"),
    _content_block: $ => repeat1($._content_item),

    knot_block: $ => prec.right(seq(
      $._knot_block_start,
      field('header', $.knot),
      optional($._content_block),
      repeat($.stitch_block),
      $._knot_block_end,
    )),

    stitch_block: $ => prec.right(seq(
      $._stitch_block_start,
      field('header', $.stitch),
      optional($._content_block),
      $._stitch_block_end,
    )),

    choice_block: $ => prec.right(seq(
      $._choice_block_start,
      field('header', $.choice),
      $._eol,
      repeat($._content_item),
      $._choice_block_end,
    )),

    _content_item: $ => choice(
      $._single_line_content_item,
      // These handle line breaks on their own:
      $.choice_block,
      $.gather_block,
    ),

    _redirect: $ => choice(
      $.divert,  // diverts are defined as part of expressions.
      $.tunnel,
      $.thread,
    ),

    _divert_target: $ => prec.right(choice($.identifier, $.qualified_name, $.call)),

    text: $ => prec.right(repeat1($._word)),

    _word: _ => choice(...STRING_PARTS, '"'), // as stated above: everything a string can be, plus `"`

    content: $ => prec.right(choice(
      seq(
        field('content', $._glue_logic_or_text),
        field('tag', repeat($.tag)),
        field('redirect', optional($._redirect)),
      ),
      seq(
        field('tag', repeat1($.tag)),
        field('redirect', optional($._redirect)),
      ),
      field('redirect', $._redirect),
    )),

    // Choice content can not start with logic blocks, so we make a special version.
    _glue_logic_or_text: $ => prec.right(repeat1(choice(
      $.glue,
      $._logic,
      $.text,
    ))),

    glue: _ => '<>',

    tag: $ => prec.left(seq(
      field('mark', '#'),
      field('content', $._glue_logic_or_text)
    )),

    choice: $ => choice(
      field('marks', $.choice_marks),  // Completely empty choice == fallback choice. Generates a compiler warning ("please add a `->`"), but it is valid syntax.
      seq(
        field('marks', $.choice_marks),
        optional(seq(
          $._label_field,
          optional($._eol_field),
        )),
        repeat(seq(
          field('condition', $.condition),
          optional($._eol_field),
        )),
        $._choice_content,
      ),
    ),

    _eol_field: $ => field('eol', alias($._eol, $.eol)),

    choice_marks: $ => prec.right(repeat1(prec(PREC.ink, $.choice_mark))),
    _label_field: $ => prec(PREC.ink, field('label', $.label)),
    condition: $ => seq('{', field('expr', $.expr), '}'),

    _choice_content: $ => prec.right(choice(
      field('main', $._choice_main_content),
      $._compound_choice_content,
      // empty fallback choice:
      $._divert_mark,
    )),

    choice_only: $ => seq(mark('['), optional($.content), mark(']')),

    knot: $ => prec.right(seq(
      field("start_mark", $._knot_mark),
      field('function', optional('function')),
      field('name', $.identifier),
      field('params', optional($.params)),
      field("end_mark", optional($._knot_mark)),
      $._eol,
    )),

    _knot_mark: _ => alias(mark(/==+/), '=='), // TODO: Be sure to document that we collapse all knot marks to this "literal" (to distinguish it from the comparison operator)
    _stitch_mark: _ => alias(mark('='), '='),
    _divert_mark: _ => alias(mark('->'), '->'),
    stitch: $ => prec.right(seq(
      field('start_mark', $._stitch_mark),
      field('name', $.identifier),
      field('params', optional($.params)),
      $._eol,
    )),

    include: $ => seq(
      field('keyword', 'INCLUDE'),
      $._space,
      field('path', alias(/[^\n]+/, $.path))
    ),

    todo_comment: _ => seq(
      field('keyword', mark('TODO')),
      ':',
      field('text', /[^\n]*/),
    ),

    _space: _ => /[ \t]+/,
    // _space: _ => /\p{Space}+/, TODO: activate and write test

    line_comment: $ => seq(/\/\/[^\n]*/, $._eol),
