test/corpus/1_basics/1_content.txt
==========
.AAA. Text
==========
Hello, world!
---

(ink
  (content_block
    (text)))

==============
.AAB. Comments
==============
"What do you make of this?" she asked.

    // Something unprintable...

"I couldn't possibly comment," I replied.

/*
	... or an unlimited block of text
 */
---

(ink
  (content_block
    (text)
    (comment)
    (text)
    (comment)))

=================================
.AAC. Comments can occur anywhere
=================================
"What do you make of this?" she asked.  // At end of line.

"I couldn't possibly comment," I /* commentingly */ replied.
---

(ink
  (content_block
    (text)
    (comment)
    (text
      (comment))))

===================
.AAD. TODO Comments
===================
TODO: Write this section properly!

And?

---

(ink
  (content_block
    (todo_comment)
    (text)))

=================================
.AADa. TODO Comments corner cases
=================================
	   TODO 	: Make sure indent and whitespace doesn't break anything.

He remembered that he was allowed to write TODO: anywhere else on the line.
---

(ink
  (content_block
    (todo_comment)
    (text)))

==========
.AAE. Tags
==========
A line of normal game-text. # colour it blue
# another tag  # yet another tag

Some more text. # and a tag
---

(ink
  (content_block
    (content
      (text)
      (tag
        (text)))
    (content
      (tag
        (text))
      (tag
        (text)))
    (content
      (text)
      (tag
        (text)))))
