test/corpus/1_basics/2_choices.txt
===
.ABA. Choices
===
Hello world!
*	Hello back!
	Nice to hear from you!
---

(ink
  (content_block
    (content
      (text))
    (choice_block
      (choice
        (choice_marks
          (choice_mark))
        main: (content
          (text)))
      (content
        (text)))))

===
.ABB. Suppressing Choice Text
===
Hello world!
*	Hello [back!] right back to you!
	Nice to hear from you!
---

(ink
  (content_block
    (content
      (text))
    (choice_block
      (choice
        (choice_marks
          (choice_mark))
        main: (content
          (text))
        choice_only: (choice_only
          (content
            (text)))
        when_chosen: (content
          (text)))
      (content
        (text)))))

===
.ABBa. Corner Case: Outside of choices, square brackets are just text
===
Hello [World]
---

(ink
  (content_block
    (content
      (text))))

===
.ABBb. Corner Case: Within choices, square brackets can be escaped to become text
===
* Hello \[World\]
---

(ink
  (content_block
    (choice_block
      (choice
        (choice_marks
          (choice_mark))
        (content
          (text))))))

===
.ABC. Multiple choices
===
"What's that?" my master asked.
*	"I am somewhat tired[."]," I repeated.
	"Really," he responded. "How deleterious."
*	"Nothing, Monsieur!"[] I replied.
	"Very good, then."
*	"I said, this journey is appalling[."] and I want no more of it."
	"Ah," he replied, not unkindly. "I see you are feeling frustrated. Tomorrow, things will improve."
---

(ink
  (content_block
    (content
      (text))
    (choice_block
      (choice
        (choice_marks
          (choice_mark))
        main: (content
          (text))
        choice_only: (choice_only
          (content
            (text)))
        when_chosen: (content
          (text)))
      (content
        (text)))
    (choice_block
      (choice
        (choice_marks
          (choice_mark))
        main: (content
          (text))
        choice_only: (choice_only)
        when_chosen: (content
          (text)))
      (content
        (text)))
    (choice_block
      (choice
        (choice_marks
          (choice_mark))
        main: (content
          (text))
        choice_only: (choice_only
          (content
            (text)))
        when_chosen: (content
          (text)))
      (content
        (text)))))
