test/corpus/1_basics/3_knots.txt
===
.ACA. Knots
===
// vvv Whitespace before and  vvv after knot definitions is fine (note the trailing spaces).

       == back_in_london ==    
We arrived into London at 9.45pm exactly.

== bottom_knot // only two '='s and no closing mark: fine

So, more text I guess.
---

(ink
  (line_comment)
  knot: (knot_block
    header: (knot
      name: (identifier))
    content: (content_block
      (paragraph
        content: (text))))
  knot: (knot_block
    header: (knot
      name: (identifier)
      (line_comment))
    content: (content_block
      (paragraph
        content: (text)))))

===
.ACB. Simplest Knotty Script
===
-> top_knot

== top_knot ==
Hello world!
---

(ink
  content: (content_block
    (paragraph
      redirect: (divert
        target: (identifier))))
  knot: (knot_block
    header: (knot
      name: (identifier))
    content: (content_block
      (paragraph
        content: (text)))))
