test/corpus/1_basics/4_diverts.txt
===
.ADA. Knots divert to knots
===
=== back_in_london ===

We arrived into London at 9.45pm exactly.
-> hurry_home

=== hurry_home ===
We hurried home to Savile Row as fast as we could.
// For some reason we need an empty line here. Bug in Tree-Sitter or grammar?

---

(ink
  (knot_block
    (knot
      name: (identifier))
    (content_block
      (paragraph
        (text))
      (content_block
        (divert
          target: (identifier)))))
  (knot_block
    (knot
      name: (identifier))
    (content_block
      (paragraph
        (text))
      (comment))))

===
.ADB. Diverts are invisible
===
=== hurry_home ===
We hurried home to Savile Row -> as_fast_as_we_could

=== as_fast_as_we_could ===
as fast as we could.

---

(ink
  (knot_block
    (knot
      name: (identifier))
    (content_block
      (paragraph
        (text)
        (divert
          target: (identifier)))))
  (knot_block
    (knot
      name: (identifier))
    (content_block
      (paragraph
        (text)))))

===
.ADC. Glue
===
=== hurry_home ===
We hurried home <>
-> to_savile_row

=== to_savile_row ===
to Savile Row
-> as_fast_as_we_could

=== as_fast_as_we_could ===
<> as fast as we could.
---

(ink
  (knot_block
    (knot
      name: (identifier))
    (content_block
      (paragraph
        (text)
        (glue))
      (content_block
        (divert
          target: (identifier)))))
  (knot_block
    (knot
      name: (identifier))
    (content_block
      (paragraph
        (text))
      (content_block
        (divert
          target: (identifier)))))
  (knot_block
    (knot
      name: (identifier))
    (content_block
      (paragraph
        (glue)
        (text)))))

===
.ADDa. Glue on same line as divert
===
=== hurry_home ===
We hurried home <> -> to_savile_row

=== to_savile_row ===
<> to Savile Row -> as_fast_as_we_could

=== as_fast_as_we_could ===
<> as fast as we could.
---

(ink
  (knot_block
    (knot
      name: (identifier))
    (content_block
      (paragraph
        (text)
        (glue)
        (divert
          target: (identifier)))))
  (knot_block
    (knot
      name: (identifier))
    (content_block
      (paragraph
        (glue)
        (text)
        (divert
          target: (identifier)))))
  (knot_block
    (knot
      name: (identifier))
    (content_block
      (paragraph
        (glue)
        (text)))))

===
.ADDb. Can't use too much glue
===
When we <> came home, <> <> <> we went to sleep.
---

(ink
  (content_block
    (paragraph
      (text)
      (glue)
      (text)
      (glue)
      (glue)
      (glue)
      (text))))

===
.ADDc. Sometimes the scanner needs help using backslashes
===
We hurried home to Savile Road sevent-\<> no wait, it was a number <\<>-> what_number

=== what_number ===
20

---

(ink
  (content_block
    (paragraph
      (text)
      (glue)
      (text)
      (glue)
      (divert
        target: (identifier))))
  (knot_block
    (knot
      name: (identifier))
    (content_block
      (paragraph
        (text)))))
