test/corpus/1_basics/5_branching.txt
===
.AEA. Basic Branching
===
== paragraph_1 ==
You stand by the wall of Analand, sword in hand.
* [Open the gate] -> paragraph_2
* [Smash down the gate] -> paragraph_3
* [Turn back and go home] -> paragraph_4

== paragraph_2 ==
You open the gate, and step out onto the path.

...

---

(ink
  knot: (knot_block
    header: (knot
      name: (identifier))
    content: (content_block
      (paragraph
        content: (text))
      (choice_block
        header: (choice
          marks: (choice_marks
            (choice_mark))
          choice_only: (choice_only
            (content
              content: (text)))
          when_chosen: (content
            redirect: (divert
              target: (identifier)))))
      (choice_block
        header: (choice
          marks: (choice_marks
            (choice_mark))
          choice_only: (choice_only
            (content
              content: (text)))
          when_chosen: (content
            redirect: (divert
              target: (identifier)))))
      (choice_block
        header: (choice
          marks: (choice_marks
            (choice_mark))
          choice_only: (choice_only
            (content
              content: (text)))
          when_chosen: (content
            redirect: (divert
              target: (identifier)))))))
  knot: (knot_block
    header: (knot
      name: (identifier))
    content: (content_block
      (paragraph
        content: (text))
      (paragraph
        content: (text)))))

===
.AEB. Branching and joining
===
== back_in_london ==

We arrived into London at 9.45pm exactly.

*	"There is not a moment to lose!"[] I declared.
	-> hurry_outside

*	"Monsieur, let us savour this moment!"[] I declared.
	My master clouted me firmly around the head and dragged me out of the door.
	-> dragged_outside

*	[We hurried home] -> hurry_outside


== hurry_outside ==
We hurried home to Savile Row -> as_fast_as_we_could


== dragged_outside ==
He insisted that we hurried home to Savile Row
-> as_fast_as_we_could


== as_fast_as_we_could ==
<> as fast as we could.
---

(ink
  (knot_block
    (knot
      (identifier))
    (content_block
      (paragraph
        (text))
      (choice_block
        (choice
          (choice_marks
            (choice_mark))
          (content
            (text))
          (choice_only)
          (content
            (text)))
        (paragraph
          (divert
            (identifier))))
      (choice_block
        (choice
          (choice_marks
            (choice_mark))
          (content
            (text))
          (choice_only)
          (content
            (text)))
        (paragraph
          (text))
        (paragraph
          (divert
            (identifier))))
      (choice_block
        (choice
          (choice_marks
            (choice_mark))
          (choice_only
            (content
              (text)))
          (content
            (divert
              (identifier)))))))
  (knot_block
    (knot
      (identifier))
    (content_block
      (paragraph
        (text)
        (divert
          (identifier)))))
  (knot_block
    (knot
      (identifier))
    (content_block
      (paragraph
        (text))
      (paragraph
        (divert
          (identifier)))))
  (knot_block
    (knot
      (identifier))
    (content_block
      (paragraph
        (glue)
        (text)))))
