test/corpus/1_basics/6_includes_and_stitches.txt
===
.AFA. Knots can be subdivided
===
== the_orient_express ==
= in_first_class
	...
= in_third_class
	...
= in_the_guards_van
	...
= missed_the_train
	...

---

(ink
  knot: (knot_block
    header: (knot
      name: (identifier))
    stitch: (stitch_block
      header: (stitch
        name: (identifier))
      content: (content_block
        (paragraph
          content: (text))))
    stitch: (stitch_block
      header: (stitch
        name: (identifier))
      content: (content_block
        (paragraph
          content: (text))))
    stitch: (stitch_block
      header: (stitch
        name: (identifier))
      content: (content_block
        (paragraph
          content: (text))))
    stitch: (stitch_block
      header: (stitch
        name: (identifier))
      content: (content_block
        (paragraph
          content: (text))))))

===
.AFAa. Comments belong to Knot/Stitch blocks that follow
===
// knot comment
== the_orient_express ==

// knot content comment
knot content

// stitch comment
= in_first_class

// stitch content comment
stitch content
---
(ink
  (knot_block
    (line_comment)
    (knot
      (identifier))
    (line_comment)
    (content_block
      (paragraph
        (text)))
    (stitch_block
      (line_comment)
      (stitch
        (identifier))
      (line_comment)
      (content_block
        (paragraph
          (text))))))

===
.AFB. Stitches have unique names
===
*	[Travel in third class]
	-> the_orient_express.in_third_class

*	[Travel in the guard's van]
	-> the_orient_express.in_the_guards_van
---

(ink
  content: (content_block
    (choice_block
      header: (choice
        marks: (choice_marks
          (choice_mark))
        choice_only: (choice_only
          (content
            content: (text))))
      content: (paragraph
        redirect: (divert
          target: (qualified_name
            (identifier)
            (identifier)))))
    (choice_block
      header: (choice
        marks: (choice_marks
          (choice_mark))
        choice_only: (choice_only
          (content
            content: (text))))
      content: (paragraph
        redirect: (divert
          target: (qualified_name
            (identifier)
            (identifier)))))))

===
.AFC. Script files can be combined
===
INCLUDE newspaper.ink
INCLUDE cities/vienna.ink
INCLUDE journeys/orient_express.ink
---

(ink
  (content_block
    (include
      (path))
    (include
      (path))
    (include
      (path))))

===
.AFCa. Include corner cases
===
      INCLUDE indented/is_completely_fine_I_th.ink
 INCLUDE	tab_separated/is_completely_fine_I_th.ink

He yelled, “I love that I can INCLUDE this word in text!!”
INCLUDED in this is also a free beer.
INC is a common suffix for a company
---

(ink
  (content_block
    (include
      (path))
    (include
      (path))
    (paragraph
      (text))
    (paragraph
      (text))
    (paragraph
      (text))))
