test/corpus/1_basics/7_varying_choices.txt
===
.AGA. Fallback Choices
===
*	-> out_of_options

* 	->
	Mulder never could explain how he got out of that burning box car. -> season_2

---

(ink
  (content_block
    (choice_block
      (choice
        (choice_marks)
        main: (content
          (divert
            target: (identifier)))))
    (choice_block
      (choice
        (choice_marks))
      (content
        (text)
        (divert
          target: (identifier))))))

===
.AGB. Fallback Choices extended example
===
=== find_help ===

	You search desperately for a friendly face in the crowd.
	*	The woman in the hat[?] pushes you roughly aside. -> find_help
	*	The man with the briefcase[?] looks disgusted as you stumble past him. -> find_help
	*	->
		But it is too late: you collapse onto the station platform. This is the end.
		-> END

---

(ink
  (knot_block
    (knot
      name: (identifier))
    (content_block
      (content
        (text))
      (choice_block
        (choice
          (choice_marks)
          main: (content
            (text))
          choice_only: (choice_only
            (content
              (text)))
          when_chosen: (content
            (text)
            (divert
              target: (identifier)))))
      (choice_block
        (choice
          (choice_marks)
          main: (content
            (text))
          choice_only: (choice_only
            (content
              (text)))
          when_chosen: (content
            (text)
            (divert
              target: (identifier)))))
      (choice_block
        (choice
          (choice_marks))
        (content
          (text))
        (content
          (divert
            target: (identifier)))))))

===
.AGC. Sticky Choices
===
=== homers_couch ===
	+	[Eat another donut]
		You eat another donut. -> homers_couch
	*	[Get off the couch]
		You struggle up off the couch to go and compose epic poetry.
		-> END

---

(ink
  (knot_block
    (knot
      name: (identifier))
    (content_block
      (choice_block
        (choice
          (choice_marks)
          choice_only: (choice_only
            (content
              (text))))
        (content
          (text)
          (divert
            target: (identifier))))
      (choice_block
        (choice
          (choice_marks)
          choice_only: (choice_only
            (content
              (text))))
        (content
          (text))
        (content
          (divert
            target: (identifier)))))))

===
.AGD. Sticky Fallback Choices
===
=== conversation_loop
	*	[Talk about the weather] -> chat_weather
	*	[Talk about the children] -> chat_children
	+	-> sit_in_silence_again

---

(ink
  (knot_block
    (knot
      name: (identifier))
    (content_block
      (choice_block
        (choice
          (choice_marks)
          choice_only: (choice_only
            (content
              (text)))
          when_chosen: (content
            (divert
              target: (identifier)))))
      (choice_block
        (choice
          (choice_marks)
          choice_only: (choice_only
            (content
              (text)))
          when_chosen: (content
            (divert
              target: (identifier)))))
      (choice_block
        (choice
          (choice_marks)
          main: (content
            (divert
              target: (identifier))))))))

===
.AGE. Conditional Choices
===
*	{ not visit_paris } 	[Go to Paris] -> visit_paris
+ 	{ visit_paris 	 } 		[Return to Paris] -> visit_paris

*	{ visit_paris.met_estelle } [ Telephone Mme Estelle ] -> phone_estelle

---

(ink
  (content_block
    (choice_block
      (choice
        (choice_marks)
        condition: (condition
          (unary
            right: (identifier)))
        choice_only: (choice_only
          (content
            (text)))
        when_chosen: (content
          (divert
            target: (identifier)))))
    (choice_block
      (choice
        (choice_marks)
        condition: (condition
          (identifier))
        choice_only: (choice_only
          (content
            (text)))
        when_chosen: (content
          (divert
            target: (identifier)))))
    (choice_block
      (choice
        (choice_marks)
        condition: (condition
          (qualified_name
            (identifier)
            (identifier)))
        choice_only: (choice_only
          (content
            (text)))
        when_chosen: (content
          (divert
            target: (identifier)))))))

===
.AGF. Advanced Conditional Choices: Multiple Choices
===
*	{ not visit_paris } 	[Go to Paris] -> visit_paris
+ 	{ visit_paris } { not bored_of_paris }
	[Return to Paris] -> visit_paris

---

(ink
  (content_block
    (choice_block
      (choice
        (choice_marks)
        condition: (condition
          (unary
            right: (identifier)))
        choice_only: (choice_only
          (content
            (text)))
        when_chosen: (content
          (divert
            target: (identifier)))))
    (choice_block
      (choice
        (choice_marks)
        condition: (condition
          (identifier))
        condition: (condition
          (unary
            right: (identifier)))
        choice_only: (choice_only
          (content
            (text)))
        when_chosen: (content
          (divert
            target: (identifier)))))))

===
.AGG. Logical Operators (and parentheses)
===
*	{ not (visit_paris or visit_rome) && (visit_london || visit_new_york) } [ Wait. Go where? I'm confused. ] -> visit_someplace

---

(ink
  (content_block
    (choice_block
      (choice
        (choice_marks)
        condition: (condition
          (binary
            left: (unary
              right: (paren
                (binary
                  left: (identifier)
                  right: (identifier))))
            right: (paren
              (binary
                left: (identifier)
                right: (identifier)))))
        choice_only: (choice_only
          (content
            (text)))
        when_chosen: (content
          (divert
            target: (identifier)))))))

===
.AGH. Knot/stitch labels are actually read counts
===
*	{seen_clue} [Accuse Mr Jefferson]
* {seen_clue > 3} [Flat-out arrest Mr Jefferson]

---

(ink
  (content_block
    (choice_block
      (choice
        (choice_marks)
        condition: (condition
          (identifier))
        choice_only: (choice_only
          (content
            (text)))))
    (choice_block
      (choice
        (choice_marks)
        condition: (condition
          (binary
            left: (identifier)
            right: (number)))
        choice_only: (choice_only
          (content
            (text)))))))
